--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "python_build": "npm run python_build:unix || npm run python_build:win"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "electron-settings": "^4.0.4",
     "formik": "^2.4.6",
     "python-shell": "^5.0.0",
