--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ dist-electron/preload.mjs
 /release
 /dist-electron
 *.pyc
+dist-electron/main.js
+dist-electron/preload.mjs
+python/__pycache__/api_model.cpython-313.pyc
