--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && npm run python_init && npm run python_build && vite build && electron-builder",
+    "dev": "npm run python_init && vite",
+    "build": "npm run python_init && npm run python_build && vite build && electron-builder",
     "build_nocheck": "vite build && electron-builder",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "build_python": "npm run python_init && npm run python_build",
     "python_init:unix": "python3 -m venv .venv && . .venv/bin/activate && pip install -r requirements.txt",
-    "python_init:win": "python -m venv .venv && .venv\\Scripts\\activate && pip install -r requirements.txt",
+    "python_init:win": "python -m venv venv && cd venv && cd Scripts && activate.bat && cd ../../ && pip install -r requirements.txt",
     "python_build:unix": ". .venv/bin/activate && pyinstaller --distpath python-dist api.spec --clean --noconfirm",
-    "python_build:win": ".venv\\Scripts\\activate && pyinstaller --distpath python-dist api.spec --clean --noconfirm",
+    "python_build:win": ".venv\\Scripts\\activate.bat && pyinstaller --distpath python-dist api.spec --clean --noconfirm",
     "python_init": "npm run python_init:unix || npm run python_init:win",
     "python_build": "npm run python_build:unix || npm run python_build:win"
   },
